[metadata]
name = yang
summary = Daho orchestration service
description-file =
    README.rst
author = Daho
author-email = publicservice@fabric4cloud.com
home-page = http://www.fabric4cloud.com/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7

[files]
packages =
    yangtest

[build_sphinx]
all-files = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = yangtest/locale
domain = yangtest

[update_catalog]
domain = yangtest
output_dir = yangtest/locale
input_file = yangtest/locale/yangtest.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = yangtest/locale/yangtest.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source